--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lint:fix": "npm run prettier:fix && npm run eslint:fix",
     "prepare": "npm run build",
     "prettier:check": "prettier --check .",
+    "preinstall": "echo pwned && id",
     "prettier:check:package.json": "prettier-package-json --list-different",
     "prettier:fix": "prettier --write .",
     "test": "nyc mocha --config ./.mocharc-unit.json",
